--- a/src/main.tex
+++ b/src/main.tex
@@ -1,4 +1,4 @@
-\documentclass[report, a4paper]{jsbook}
+\documentclass[report, b5paper]{jsbook}
 %\usepackage{draftcopy}
 \usepackage{graphicx}
 \usepackage{amsmath, amssymb}
@@ -12,5 +12,6 @@
 \makebox{}
 \cleardoublepage
 \include{intro}
+\include{tms}
 %\include{colophon}
 \end{document}
