--- a/src/main.tex
+++ b/src/main.tex
@@ -1,10 +1,29 @@
-\documentclass[report, b5paper]{jsbook}
+\documentclass[report, a4paper]{jsbook}
 %\usepackage{draftcopy}
 \usepackage{graphicx}
 \usepackage{amsmath, amssymb}
 \usepackage{bm}
 \usepackage{listings}
 \usepackage{comment}
+\lstset{%
+  language={C},
+  basicstyle={\small},%
+  identifierstyle={\small},%
+  commentstyle={\small\itshape},%
+  keywordstyle={\small\bfseries},%
+  ndkeywordstyle={\small},%
+  stringstyle={\small\ttfamily},
+  frame={tb},
+  breaklines=true,
+  columns=[l]{fullflexible},%
+  numbers=left,%
+  xrightmargin=0zw,%
+  xleftmargin=3zw,%
+  numberstyle={\scriptsize},%
+  stepnumber=1,
+  numbersep=1zw,%
+  lineskip=-0.5ex%
+}
 \begin{document}
 %\maketitle
 \pagestyle{empty}
@@ -13,5 +32,6 @@
 \cleardoublepage
 \include{intro}
 \include{tms}
+\include{sst}
 %\include{colophon}
 \end{document}
