change subsection to section in tms.tex

--- a/src/tms.tex
+++ b/src/tms.tex
@@ -13,7 +13,7 @@ TMSは、正確に言うと Open Source Geospatial Fundation (OSGeo財団)によ
 タイルの仕様で、オープンソースなプロダクトによく使われています。
 同様の機能を実現した、WMTS (Web Map Tile Service)というものもあります。
 
-\subsection*{タイル}
+\section*{タイル}
 一枚の大きな世界地図を、小片に分割して必要なものだけ送ることで、ネットワークの帯域やメモリの消費を抑えることができます。
 この分割された地図の小片を「タイル」と呼びます。
 TMSでは、タイルは一辺が256ピクセルの正方形のPNG画像です。
@@ -43,7 +43,7 @@ y = 2^{z-1}(1-\frac{\ln(\tan(\frac{lat\pi}{180})+\sec(\frac{lat\pi}{180}))}{\pi}
 TMSは左下で、WMTSは右上で、OpenStreetMapは、Y flipped TMSとやらで、左上だったり、
 結構闇だったりします。上の式はOpenStreetMapのものなので、TMSとは異なるので注意が必要です。
 
-\subsection*{タイルの配布}
+\section*{タイルの配布}
 さて、タイルのことはわかってきました。それでは、どのようにタイルを取得するすれば良いのでしょう。
 TMSはブラウザに地図を表示するためのものですので、もちろんWebサーバからHTTPで取得します。
 URLは、以下のようになります。
@@ -66,7 +66,7 @@ nameはタイルの名前です。
 
 この本でも、がっちりTMSを実装するのではなく、ざっくりXYZタイルサービスを作成することにしましょう。
 
-\subsection*{タイルの作成}
+\section*{タイルの作成}
 では、タイルを作成しましょう。
 元になる、測地系といった地理空間情報が付いた画像があれば簡単です。
 例えば、world.tiffという、GeoTiffファイルがあったとしましょう。
