--- a/src/cover.tex
+++ b/src/cover.tex
@@ -1,14 +1,14 @@
 \begin{center}
-\scalebox{3}{\texttt{タイルマップサービスを作ってみた}}\\
+  \scalebox{3}{\texttt{タイルマップサービスを作ってみた}}\\
+  \scalebox{3}{\texttt{（追補版）}}\\
 \vspace{3em}
-\scalebox{2}{\texttt{2017年4月9日}}\\
+\scalebox{2}{\texttt{2017年8月13日}}\\
 \vspace{1em}
-\scalebox{2}{\texttt{技術書典2}}\\
+\scalebox{2}{\texttt{C92}}\\
 \vspace{6em}
 \scalebox{2}{\texttt{Google Map的なWeb地図サービスの開発}}\\
-%\scalebox{2}{\texttt{Wifiに技適が必要な法的根拠まで}}\\
 \vspace{4em}
 \end{center}
 %
-\vspace{35em}
+\vspace{33em}
 \hspace{35em}\scalebox{1}{\includegraphics{by-sa.eps}}
