fix line number

--- a/src/sst.tex
+++ b/src/sst.tex
@@ -28,18 +28,15 @@ h5ファイルの、Geophysical\_dataという項に、1800x3600の2次元デー
 そちらを参照してください。(https://matplotlib.org/examples/color/colormaps\_reference.html) 今回はこのような図でよく使われる、jetを使用しました。
 具体的には、Listing \ref{code}のmake\_colortable関数で作っています。
 
+ダウンロードしたHDF5ファイルから、GeoTiffへ変換するPythonスクリプトをlisting \ref{code}に示しています。GitHubでこのスクリプトのデジタルデータを公開しています。
 
-%技術書典で購入された方には、前述のgithubページでPDFを公開します。夏コミ後に見に行ってみてください。
-
-ダウンロードしたHDF5ファイルから、GeoTiffへ変換するPythonスクリプトをlisting \ref{code}に示しています。GitHubでデジタルデータを公開しています。
 可視化部分は、listing \ref{code}の11から35行目に記述しています。
 そして関数gey\_bandで、一つ一つの数値をRGBとアルファチャンネルに変換しています。
 変換した、RGBAのチャンネルを37行目からはじまるarray\_to\_raster関数でGeoTiffを作成しています。
-46行目のforループで各チャンネルを書き込んでいます。
-51から53行目で測地系の情報を、43行目で1ピクセルあたりの座標の変化量を指定しています。
+47行目のforループで各チャンネルを書き込んでいます。
+52から54行目で測地系の情報を、42行目で1ピクセルあたりの座標の変化量を指定しています。
 今回のデータは、緯度経度なので、測地系に緯度経度を使用していることを意味するEPSG4326を
 指定しています。
-測地系に関しても、夏コミまでに書ければいいなぁ〜
 
 このコードを使って生成したGeoTiffの例を図\ref{fig:sst}に示します。
 印刷物だと色がわからないので、是非GitHubのPDFをご覧ください。
@@ -62,4 +59,3 @@ h5ファイルの、Geophysical\_dataという項に、1800x3600の2次元デー
 \caption{海水面温度3日間平均値}
 \label{fig:sst-ave}
 \end{figure}
-
