--- a/src/intro.tex
+++ b/src/intro.tex
@@ -1,6 +1,6 @@
 \chapter*{はじめに}
 
-さすがに技術書典でこんな本に興味を示してくれた人が、Google Mapを知らないということは
+さすがにC92でこんな本に興味を示してくれた人が、Google Mapを知らないということは
 ないでしょう。この本はGoogle Mapのようにぐりぐり動く、いわゆるSlippy Mapを使った
 Webサービスを開発する方法が書かれています。
 すでに地形図や道路地図は、Google Mapだけでなく、地理院地図やOpenStreetMapがあります。
@@ -17,9 +17,7 @@ JAXAに利用申請をすると、無料で使用することができます。
 この本で作成するWebアプリは、Debian/GNU Linux上で動作する事を前提にしています。
 ですので、Linuxの基本的な操作ができる人を対象にしています。
 また、Webサービスを開発するだけの基礎的な素養がある事を前提にしています。
-nginxの設定ファイルやPythonやシェルスクリプト、C++等のソースコードが出てきます。
-適宜解説に努めますがが、十中八九説明が足りないので、必要に応じてリファレンス等を参照すると
-良いでしょう。
+適宜解説に努めますが、十中八九説明が足りないので、必要に応じてリファレンス等を参照してください。
 
 この本に出てくるソースコードは、GitHubで公開しています。また電子版もGitHubから入手できます。間違い等ありましたら、ISSUEを投げていただければ対応できると思います。
 リポジトリのURLは以下の通りです。\\
