change font of code

--- a/src/main.tex
+++ b/src/main.tex
@@ -7,7 +7,7 @@
 \usepackage{comment}
 \lstset{%
   language={C},
-  basicstyle={\small},%
+  basicstyle={\small\ttfamily},%
   identifierstyle={\small},%
   commentstyle={\small\itshape},%
   keywordstyle={\small\bfseries},%
