--- a/src/intro.tex
+++ b/src/intro.tex
@@ -4,22 +4,21 @@
 ないでしょう。この本はGoogle Mapのようにぐりぐり動く、いわゆるSlippy Mapを使った
 Webサービスを開発する方法が書かれています。
 すでに地形図や道路地図は、Google Mapだけでなく、地理院地図やOpenStreetMapがあります。
-今回は、この地理院地図やOpenStreetMapを基本図として、その上にGSMaPと呼ばれる
-降水量データを重ねた情報を提供するサービスを開発します。
+今回は、この地理院地図やOpenStreetMapを基本図として、その上に
+水循環変動観測衛星「しずく」（GCOM-W）という地球観測衛星が観測した
+海水面温度(SST)のデータを重ねた情報を提供するサービスを開発します。
+このデータは、JAXAに利用申請をすると、無料で使用することができます。
 
-GSMaPは、JAXA、NOAA、EUMETSATが運用している気象衛星のデータを準リアルタイム（といっても4時間前のデータですが）の数値データが1時間毎に提供されています。
-JAXAに利用申請をすると、無料で使用することができます。
-この数値データをまず画像データとして可視化し、その画像に位置情報を付加し、タイルマップを
+SSTは、数値データとして提供されますので、まず画像データとして可視化し、その画像に位置情報を付加し、タイルマップを
 生成していきます。
-気象データが相手ですから、毎時自動的にデータをアップデートする必要があります。
-そこで、QGISのようなGUIのプログラムではなく、できるだけコマンドラインだけで作成していきます。
+気象データが相手ですから、定期的にデータをアップデートする必要があります。
+そこで、QGISのようなGUIのプログラムではなく、自動化を見据えて、コマンドラインプログラムだけで作成していきます。
 
-この本で作成するWebアプリは、Debian/GNU Linux上で動作する事を前提にしています。
-ですので、Linuxの基本的な操作ができる人を対象にしています。
+この本で作成するWebアプリは、Debian/GNU Linux上で動作する事を前提にしており、Linuxの基本操作ができる人を対象にしています。
 また、Webサービスを開発するだけの基礎的な素養がある事を前提にしています。
 適宜解説に努めますが、十中八九説明が足りないので、必要に応じてリファレンス等を参照してください。
 
-この本に出てくるソースコードは、GitHubで公開しています。また電子版もGitHubから入手できます。間違い等ありましたら、ISSUEを投げていただければ対応できると思います。
+この本に出てくるソースコードは、GitHubで公開しています。また電子版もGitHubから入手できます。間違い等ありましたら、Issueを投げていただければ対応できると思います。
 リポジトリのURLは以下の通りです。\\
 \texttt{https://github.com/chomy/DevelopmentOfTMS}
 
