generate pdf files with make

--- a/src/sst.tex
+++ b/src/sst.tex
@@ -47,14 +47,14 @@ h5ファイルの、Geophysical\_dataという項に、1800x3600の2次元デー
 
 \begin{figure}[t]
 \centering
-\scalebox{0.6}{\includegraphics{sst_mono.eps}}
+\scalebox{0.6}{\includegraphics{sst.eps}}
 \caption{海水面温度}
 \label{fig:sst}
 \end{figure}
 
 \begin{figure}[t]
 \centering
-\scalebox{0.6}{\includegraphics{sst-ave_mono.eps}}
+\scalebox{0.6}{\includegraphics{sst-ave.eps}}
 \caption{海水面温度3日間平均値}
 \label{fig:sst-ave}
 \end{figure}
