fix line number

--- a/src/sst.tex
+++ b/src/sst.tex
@@ -29,11 +29,11 @@ h5ファイルの、Geophysical\_dataという項に、1800x3600の2次元デー
 
 ダウンロードしたHDF5ファイルから、GeoTiffへ変換するPythonスクリプトをlisting \ref{code}に示しています。GitHubでこのスクリプトのデジタルデータを公開しています。
 
-可視化部分は、listing \ref{code}の11から35行目に記述しています。
-そして関数gey\_bandで、一つ一つの数値をRGBとアルファチャンネルに変換しています。
-変換した、RGBAのチャンネルを37行目からはじまるarray\_to\_raster関数でGeoTiffを作成しています。
-47行目のforループで各チャンネルを書き込んでいます。
-52から54行目で測地系の情報を、42行目で1ピクセルあたりの座標の変化量を指定しています。
+listing \ref{code}の関数get\_bandで、一つ一つの数値をRGBとアルファチャンネルに変換し可視化しています。
+変換した、RGBAのチャンネルを41行目からはじまるarray\_to\_raster関数でGeoTiffを作成しています。
+50行目のforループで各チャンネルを書き込んでいます。
+47行目で1ピクセルあたりの座標の変化量を、
+55から57行目で測地系の情報を指定しています。
 今回のデータは、緯度経度なので、測地系に緯度経度を使用していることを意味するEPSG4326を
 指定しています。
 
